- Rework sub bug fix in order not to interfere with AI pathing vs enemy units

* RELEASE 16K
- Consider lethal bombard ability when disallowing useless bombard vs airfields

* RELEASE 16J
- Option to allow bombardment of other improvements on a tile with an occupied airfield
- Fix aerial defensive bombard animations showing over fog during AI replays

* RELEASE 16I
- Option to allow land units to bombard aircraft and naval units in cities
- Disallow useless bombard attacks vs airfields
- Option not to end a unit's turn after it bombards a barricade
- Stop precision strikes vs tiles from destroying occupied airfields
- Naval units in a city may perform defensive bombard vs land attackers

* RELEASE 16H
- Allow precision strikes to target tile improvements
- Overhaul implementation of shared visibility for simplicity and correctness
- Update UI after stack bombarding (fixes bombard button not disappearing for multi-move units w/o blitz)
- Fix crash caused by previous fix for incorrect ETAs w/ limited railroad movement

* RELEASE 16G
- Fix two bugs in shared hotseat visibility

* RELEASE 16F
- Prevent game music from being reset during hotseat replay
- Update minimap when showing replay so it doesn't display info for a previous player
- Expand shared hotseat visibility to cover more UI code

* RELEASE 16E
- Option to share visibility among all human players in a hotseat game
- Re-enable main GUI before showing hotseat AI replay

* RELEASE 16B
- Zone of control changes
  - Allow land-to-sea and sea-to-land attacks, only using bombard stat
  - May be lethal
  - May be exerted by air units
  - Show attack animation even when attacker is not at the top of its stack
- Defensive bombard changes
  - May be lethal
  - May be performed by air units
  - Invisible, undetected units may be made immune
  - May be performed multiple times per turn with blitz

* RELEASE 16 PREVIEW 2
- Limit AI artillery units to one escort (w/ offensive artillery AI)