@@ -134,6 +134,7 @@ struct c3x_config {
 	char remove_land_artillery_target_restrictions;
 	char allow_bombard_of_other_improvs_on_occupied_airfield;
 	char show_total_city_count;
+	char strengthen_forbidden_palace_ocn_effect;
 	enum special_zone_of_control_rules special_zone_of_control_rules;
 	enum special_defensive_bombard_rules special_defensive_bombard_rules;
 
