@@ -424,6 +424,9 @@ repl call, 0x56D9D1,	0x57A3C2,	0x56D941,	"Unit_is_tile_occupier_visible",		""
 repl vptr, 0x66BF68,	0x68905C,	0x66BF68,	"Demographics_Form_m22_draw",			"void (__fastcall *) (Demographics_Form * this)"
 define,	   0x600070,	0x615570,	0x5FFF50,	"PCX_Image_register_rect",			"int (__fastcall *) (PCX_Image * this, int edx, RECT * rect, int color)"
 define,	   0x5FD360,	0x611290,	0x5FD240,	"PCX_Image_set_text_effects",			"void (__fastcall *) (PCX_Image * this, int edx, int text_color, int shadow_color, int shadow_offset_x, int shadow_offset_y)"
+inlead,	   0x5676C0,	0x573AB0,	0x567670,	"Leader_get_optimal_city_number",		"int (__fastcall *) (Leader * this)"
+define,	   0x55AA10,	0x566930,	0x55A9C0,	"Leader_count_wonders_with_small_flag",		"int (__fastcall *) (Leader * this, int edx, enum ImprovementTypeSmallWonderFeatures flag, City * city_or_null)"
+repl call, 0x567706,	0x573AF6,	0x5676B6,	"Leader_count_forbidden_palaces_for_ocn",	""
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
