@@ -329,3 +329,9 @@ allow_bombard_of_other_improvs_on_occupied_airfield = false
 
 ; Displays the total number of cities in the game on the demographics screen (press F11).
 show_total_city_count = false
+
+; Under the standard game rules, each forbidden-palace-like building in an empire increases its optimal city number (OCN) by 37.5% of the base number,
+; except if the empire is running a government with communal corruption, in which case the increase is 100% of the base. With this option enabled, the
+; communal corruption rule is always in force, so each forbidden palace always increases the OCN by an amount equal to the base number.
+; NOTE: The "base" optimal city number comes from the map size. It's the number set on the "World Sizes" tab in the editor.
+strengthen_forbidden_palace_ocn_effect = false
